# Facenet

./: .gitignore  CMakeLists.txt  Classifier.cpp  Classifier.hpp  Mtcnn.cpp  Mtcnn.hpp  README.md  main.cpp  main.py
data/config/: camera.txt
data/model/20180408-102900/: README.md
data/model/mtcnn/: README.md
data/model/svm/: README.md  model
data/result/record/: demo1.flv  demo2.flv  demo3.flv
include/util/: bbox_util.hpp
lib/: align_mtcnn.py  classifier.py  facenet.py
models/: 48net.prototxt
src/: CMakeLists.txt  camera.py  client.py  gress.py
src/util/: bbox_util.cpp
